# psx-flappy-bird

./: .gitignore  CMakeLists.txt  MAKEFILE.mak  cuesheet.xml  main.cpe
data/images/: img_bird_f1.tim  img_bird_f2.tim  img_bird_f3.tim  img_buildings.tim  img_clouds.tim  img_game_over.tim  img_ground.tim  img_leaves.tim  img_logo.tim  img_pipe.tim  img_pipe_reversed.tim
data/music/: MUSIC.VAG
data/sfx/: JUMP.VAG  PASSED.VAG
imagekit/: Untitled-4.psd  images.h
include/: AudioService.h  Bird.h  BirdImpl.h  Box.h  Buildings.h  CDService.h  CircleCollider.h  Clouds.h  Collider.h  ColliderType.h  Color.h  ColorHelper.h  DisplayService.h  GameMaster.h  GameObject.h  GameObjectList.h  GameObjectService.h  GameState.h  GamepadService.h  GlobalVars.h  Ground.h  Image.h  Leaves.h  Line.h  List.h  ListNode.h  MathHelper.h  Physics.h  PhysicsService.h  Pipe.h  Pipes.h  Sprite.h  SpriteImpl.h  Vector2F.h  constants.h  controller.h
include/images/: img_bird_f1.tim.h  img_bird_f2.tim.h  img_bird_f3.tim.h  img_buildings.tim.h  img_clouds.tim.h  img_game_over.tim.h  img_ground.tim.h  img_leaves.tim.h  img_logo.tim.h  img_pipe.tim.h  img_pipe_reversed.tim.h
include/sounds/: hpup.h  jump.h  passed.h
src/: AudioService.cpp  Bird.cpp  Buildings.cpp  CDService.cpp  Clouds.cpp  ColorHelper.cpp  DisplayService.cpp  GameMaster.cpp  GameObjectList.cpp  GameObjectService.cpp  GamepadService.cpp  Ground.cpp  Leaves.cpp  PhysicsService.cpp  Pipe.cpp  Pipes.cpp  Sprite.cpp  main.cpp
